[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/minigames/minigame_popup.gd" id="1"]

[node name="MinigamePopup" type="CanvasLayer"]
layer = 20
process_mode = 1
script = ExtResource("1")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.75)

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -544.0
offset_top = -306.0
offset_right = 544.0
offset_bottom = 306.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="VBox" type="VBoxContainer" parent="Panel/Margin"]
layout_mode = 2

[node name="HeaderRow" type="HBoxContainer" parent="Panel/Margin/VBox"]
layout_mode = 2
size_flags_vertical = 0

[node name="HeaderLabel" type="Label" parent="Panel/Margin/VBox/HeaderRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 18
text = "MATRIX HACK PROTOCOL"

[node name="CommandLabel" type="Label" parent="Panel/Margin/VBox/HeaderRow"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_color = Color(0, 0.8, 0, 0.8)
theme_override_font_sizes/font_size = 16
text = "CMD: ---"
horizontal_alignment = 2

[node name="Sep" type="HSeparator" parent="Panel/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 8
theme_override_colors/separator_color = Color(0, 0.5, 0, 0.6)

[node name="GameContainer" type="Control" parent="Panel/Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3
